--- a/Backend/views/index.ejs
+++ b/Backend/views/index.ejs
@@ -3,9 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/output.css">
+
     <title>Document</title>
+    <style>
+      .boardElement{
+          display: grid;
+          grid-template-columns: repeat(8, minmax(0, 1fr));
+          grid-template-rows: repeat(8, minmax(0, 1fr));
+          width: 400px;
+          height: 400px;
+          transform: rotate(0deg);
+      }
+
+      .piece.white {
+          color: white;
+          filter: drop-shadow(0 0 2px rgba(0, 0, 0, 1));
+      }
+
+      .piece.black {
+          color: black;
+      }
+
+      .flipped {
+          transform: rotate(180deg);
+      }
+
+      .square {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+      }
+
+      .square.light {
+          background-color: #f0d9b5;
+      }
+
+      .square.dark {
+          background-color: #b58863;
+      }
+
+      .piece {
+          font-size: 36px;
+          cursor: pointer;
+      }
+
+      .piece.draggable {
+          cursor: grab;
+      }
+
+      .dragging {
+          opacity: 0.5;
+      }
+
+      /* Rotate pieces for black player */
+      .flipped .piece {
+          transform: rotate(180deg);
+      }
+  </style>
 </head>
 <body>
+    <h1>Hello</h1>
+      <div class="w-full h-full flex justify-center items-center bg-zinc-700">
+        <div class="boardElement w-96 h-96 ">
+
+        </div>
+      </div>
+
+
+      
     
+    
+    
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/js/chessgame.js"></script>
 </body>
+
 </html>
