--- a/Backend/views/index.ejs
+++ b/Backend/views/index.ejs
@@ -7,6 +7,10 @@
 
     <title>Document</title>
     <style>
+            h1{
+                    text-align:center ;
+                    font-size:10rem ;
+            }
       .boardElement{
           display: grid;
           grid-template-columns: repeat(8, minmax(0, 1fr));
@@ -63,7 +67,7 @@
   </style>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>DL Chess</h1>
       <div class="w-full h-full flex justify-center items-center bg-zinc-700">
         <div class="boardElement w-96 h-96 ">
 
